feat: enhance layout and styling; update PageContainer and SearchableList components to use new styles; adjust index.html for full viewport height

--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
 </head>
 
 <body>
-  <div id="root"></div>
+  <div id="root"
+    style="width:100vw;min-height:100vh;display:flex;flex-direction:column;align-items:center;justify-content:flex-start;">
+  </div>
   <script type="module" src="/src/main.tsx"></script>
 </body>
 
