--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body>
   <div id="root"
-    style="width:100vw;min-height:100vh;display:flex;flex-direction:column;align-items:center;justify-content:flex-start;">
+    style="max-width:100vw;min-height:100vh;display:flex;flex-direction:column;align-items:center;justify-content:flex-start;">
   </div>
   <script type="module" src="/src/main.tsx"></script>
 </body>
