Refactor and reorganize components and styles in the monorepo
- Updated project overview to emphasize readability and maintainability.
- Modified index.html to simplify the root div styling.
- Removed obsolete App.backup.tsx and Navbar.tsx files.
- Deleted SourceDocInfo.test.tsx and SourceDocInfo.tsx files, replacing them with new implementations.
- Created SourceDoc.tsx and SourceDocInfo.tsx components for better structure and functionality.
- Updated imports in MetaTextContent.tsx and SourceDocDetailPage.tsx to reflect new component paths.
- Adjusted styles in styles.ts and sourcedoc/styles.ts for improved layout and responsiveness.
- Enhanced SearchBar and SearchableList components with consistent icon sizes.
- Removed legacy theme.ts file to streamline styling approach.

--- a/index.html
+++ b/index.html
@@ -10,8 +10,7 @@
 </head>
 
 <body>
-  <div id="root"
-    style="max-width:100vw;min-height:100vh;display:flex;flex-direction:column;align-items:center;justify-content:flex-start;">
+  <div id="root" style="width:100%;">
   </div>
   <script type="module" src="/src/main.tsx"></script>
 </body>
