--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     rel="stylesheet">
 </head>
 
-<body style="margin:0;padding:0">
+<body>
   <div id="root" style="width:100%;height:100%;">
   </div>
   <script type="module" src="/src/main.tsx"></script>
